# kuru

./: .nr_tmp.c  Cargo.toml  LANG.0.0.1.md  LANG.0.0.10.md  LANG.0.0.11.md  LANG.0.0.12.md  LANG.0.0.13.md  LANG.0.0.2.md  LANG.0.0.3.md  LANG.0.0.4.md  LANG.0.0.5.md  LANG.0.0.6.md  LANG.0.0.7.md  LANG.0.0.8.md  LANG.0.0.9.md  LICENSE  LOGIC.md  README.md  SHELL.md  TERMINOLOGY.md  a.out  install.sh  nahara.md
aratar/: Cargo.toml  SHELL.md
aratar-spec/: AASI.md  C_COMPAT.md  IO.md  README.md  SEMANTICS.md  SYNTAX.md
aratar/book/: control.md  intro.md  operators.md  patterns.md  syntax.md  traits.md
aratar/c/: main.c
aratar/dive/src/: main.rs
aratar/harp/: Cargo.toml
aratar/libs/: README.md
aratar/libs/src/: stn.code  text.code
aratar/nahar/src/: main.rs  parse.rs
aratar/nmath/: Cargo.toml
aratar/nmath/examples/: sort.rs
aratar/nmath/src/: lib.rs  matrix.rs
aratar/nstructs/: Cargo.toml
aratar/nstructs/examples/: rbtree.rs
aratar/nstructs/src/: lib.rs
aratar/parser/: aratar  run.sh
aratar/parser/src/: main.rs
aratar/parser/tests/: hello_world.txt
aratar/rsmath/: Cargo.toml
aratar/rsmath/src/: main.rs
aratar/src/: main.rs
aratar/stn/: mem.nr
book/: README.md  cl_args.md  comments.md  flow.md  hello_world.md  keywords.md  operators.md  syntax.md  variables.md
compiler/: Cargo.toml  LICENSE  README.md
dive/: README.md
lamkuru/: Cargo.toml  README.md  aldru  build.sh
nahar/: Cargo.toml  README.md
nahara/: Cargo.toml
naharc/: Cargo.toml
nahare/: Cargo.toml
naharg/: Cargo.toml
rsmath/: Cargo.toml
splat-libs/: cl.splat  (+2 more)
(+41 files in other folders)
